--- a/Color Picker/Base.lproj/Main.storyboard
+++ b/Color Picker/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,6 +24,9 @@
                                 <state key="normal" title="Pick a color">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="15N-4t-Oiz" kind="show" identifier="PickColor" id="i0Z-uy-zZQ"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.4528704433400923" green="0.71945944570782372" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -31,19 +35,18 @@
                             <constraint firstItem="OQr-Fe-XD9" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="xHm-0X-ofX"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="hAk-Ic-kA1"/>
                     <connections>
-                        <segue destination="15N-4t-Oiz" kind="show" id="vFK-PZ-aok"/>
+                        <outlet property="backgroundView" destination="8bC-Xf-vdC" id="AnQ-v9-zQ3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-98.400000000000006" y="123.68815592203899"/>
         </scene>
-        <!--View Controller-->
+        <!--Color Picker View Controller-->
         <scene sceneID="xgY-uw-gLP">
             <objects>
-                <viewController id="15N-4t-Oiz" sceneMemberID="viewController">
+                <viewController id="15N-4t-Oiz" customClass="ColorPickerViewController" customModule="Color_Picker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="zPt-f3-xDK"/>
                         <viewControllerLayoutGuide type="bottom" id="1Zr-wQ-sit"/>
@@ -51,12 +54,49 @@
                     <view key="view" contentMode="scaleToFill" id="Rd8-IT-2CG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="c1a-Xf-ujp">
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="06S-K5-MAc">
+                                        <state key="normal" image="green"/>
+                                        <connections>
+                                            <action selector="greenButton:" destination="15N-4t-Oiz" eventType="touchUpInside" id="FVu-ya-pGZ"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yQK-oN-vZv">
+                                        <state key="normal" image="orange"/>
+                                        <connections>
+                                            <action selector="orangeButton:" destination="15N-4t-Oiz" eventType="touchUpInside" id="HM5-2O-qL1"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="liE-3q-Enz">
+                                        <state key="normal" image="red"/>
+                                        <connections>
+                                            <action selector="redButton:" destination="15N-4t-Oiz" eventType="touchUpInside" id="wGl-XJ-l6m"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="c1a-Xf-ujp" firstAttribute="leading" secondItem="Rd8-IT-2CG" secondAttribute="centerX" multiplier="0.3" id="2vl-YH-NJa"/>
+                            <constraint firstItem="c1a-Xf-ujp" firstAttribute="top" secondItem="Rd8-IT-2CG" secondAttribute="centerY" multiplier="0.2" id="EOh-4r-i33"/>
+                            <constraint firstItem="c1a-Xf-ujp" firstAttribute="bottom" secondItem="Rd8-IT-2CG" secondAttribute="centerY" multiplier="1.8" id="YDL-Ie-UaM"/>
+                            <constraint firstItem="c1a-Xf-ujp" firstAttribute="trailing" secondItem="Rd8-IT-2CG" secondAttribute="centerX" multiplier="1.7" id="eeb-my-C9g"/>
+                            <constraint firstItem="c1a-Xf-ujp" firstAttribute="centerX" secondItem="Rd8-IT-2CG" secondAttribute="centerX" id="mov-p4-jg2"/>
+                            <constraint firstItem="c1a-Xf-ujp" firstAttribute="centerY" secondItem="Rd8-IT-2CG" secondAttribute="centerY" id="nST-xf-xsO"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bao-6q-pKB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="716" y="124"/>
+            <point key="canvasLocation" x="746" y="124"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="green" width="48" height="48"/>
+        <image name="orange" width="48" height="48"/>
+        <image name="red" width="48" height="48"/>
+    </resources>
 </document>
